<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="vpMain" type="id"/>
    <item name="tvTanggal" type="id"/>
    <item name="tvTeam1" type="id"/>
    <item name="tvScore1" type="id"/>
    <item name="tvVersus" type="id"/>
    <item name="tvScore2" type="id"/>
    <item name="tvTeam2" type="id"/>
    <item name="tlMain" type="id"/>
    <item name="matchCard" type="id"/>
    <item name="bottom_navigation" type="id"/>
    <item name="last_match_list" type="id"/>
    <item name="next_match_list" type="id"/>
    <item name="tvError" type="id"/>
    <item name="favoritematch_list" type="id"/>
    <item name="vpMatch" type="id"/>
    <item name="tlMatch" type="id"/>
    <item name="spinner" type="id"/>
    <item name="list_team" type="id"/>
    <item name="team_badge" type="id"/>
    <item name="team_name" type="id"/>
    <item name="tlFavorite" type="id"/>
    <item name="vpFavorite" type="id"/>
    <item name="tl_team" type="id"/>
    <item name="vp_team" type="id"/>
    <item name="player_image" type="id"/>
    <item name="player_name" type="id"/>
    <item name="player_pos" type="id"/>
    <item name="list_player" type="id"/>
    <item name="search_match_list" type="id"/>
    <item name="tvTime" type="id"/>
</resources>